Add tests from Tsitsanou branch
