# service/UserService.js
@@ -1,29 +1,25 @@
 'use strict';
 var chartData = null;
-
 var updatedProfileData = null;
+var chatroom = null;
+var updateChat = null;
+var updateProfileData = null;
 
-/**
- * Create a chatRoom
- * Creates a chatRoom for the users to communicate
- *
- * body UserID_chat_body User model
- * userID Integer This is the unique identifier of the user
- * returns inline_response_200_3
- **/
-exports.createChatRoom = function(body,userID) {
+/*Get chat*/
+
+exports.getChat = function(userID) {
   return new Promise(function(resolve, reject) {
     var examples = {};
     examples['application/json'] = {
   "userList" : [ {
-    "lastModified" : "2000-01-23T04:56:07.000+00:00",
+    "last-modified" : "2000-01-23T04:56:07.000+00:00",
     "role" : "role",
     "joined" : "2000-01-23T04:56:07.000+00:00",
     "name" : "name",
     "department" : "department",
     "userID" : 0
   }, {
-    "lastModified" : "2000-01-23T04:56:07.000+00:00",
+    "last-modified" : "2000-01-23T04:56:07.000+00:00",
     "role" : "role",
     "joined" : "2000-01-23T04:56:07.000+00:00",
     "name" : "name",
@@ -47,8 +43,45 @@ exports.createChatRoom = function(body,userID) {
   "chatRoomName" : "chatRoomName",
   "chatRoomIcon" : "http://example.com/aeiou"
 };
-    if (Object.keys(examples).length > 0) {
-      resolve(examples[Object.keys(examples)]);
+    if (chatroom) {
+      resolve(chatroom);
+    } else {
+      resolve(examples);
+    }
+  });
+}
+/**
+ * Create a chatRoom
+ * Creates a chatRoom for the users to communicate
+ *
+ * body UserID_chat_body User model
+ * userID Integer This is the unique identifier of the user
+ * returns inline_response_200_3
+ **/
+exports.createChatRoom = function(body,userID) {
+  return new Promise(function(resolve, reject) {
+    chatroom = {
+      "userList": body.userList.map(user => ({
+        "lastModified": user.lastModified,
+        "role": user.role,
+        "joined": user.joined,
+        "name": user.name,
+        "department": user.department,
+        "userID": user.userID
+      })),
+      "messageList": body.messageList.map(message => ({
+        "image": message.image,
+        "timeSent": message.timeSent,
+        "messageID": message.messageID,
+        "text": message.text,
+        "userID": message.userID
+      })),
+      "chatRoomID": body.chatRoomID,
+      "chatRoomName": body.chatRoomName,
+      "chatRoomIcon": body.chatRoomIcon
+    };
+    if (chatroom) {
+      resolve(chatroom);
     } else {
       resolve();
     }
@@ -118,6 +151,39 @@ exports.sendChartToChat = function(body,userID,chartID,chatRoomID){
   });
 }
 
+
+/*GET message*/
+exports.getMessage = function(userID, chatRoomID) {
+  return new Promise(function(resolve, reject) {
+    var examples = {};
+    examples['application/json'] = {
+  "userList" :  {
+    "last-modified" : "2000-01-23T04:56:07.000+00:00",
+    "role" : "role",
+    "joined" : "2000-01-23T04:56:07.000+00:00",
+    "name" : "name",
+    "department" : "department",
+    "userID" : 0
+  }, 
+  "messageList" :  {
+    "image" : "http://example.com/aeiou",
+    "timeSent" : "2000-01-23T04:56:07.000+00:00",
+    "messageID" : 6,
+    "text" : "text",
+    "userID" : 1
+  },
+  "chatRoomID" : 5,
+  "chatRoomName" : "chatRoomName",
+  "chatRoomIcon" : "http://example.com/aeiou"
+};
+    if (updateChat) {
+      resolve(updateChat);
+    } else {
+      resolve(examples);
+    }
+  });
+}
+
 /**
  * send message to chat
  * Send message based on a chatroom ID
@@ -129,35 +195,57 @@ exports.sendChartToChat = function(body,userID,chartID,chatRoomID){
  **/
 exports.sendMessageToChat = function(body,userID,chatRoomID) {
   return new Promise(function(resolve, reject) {
-    var examples = {};
-    examples['application/json'] = {
-  "userList" : [ {
-    "last-modified" : "2000-01-23T04:56:07.000+00:00",
-    "role" : "role",
-    "joined" : "2000-01-23T04:56:07.000+00:00",
-    "name" : "name",
-    "department" : "department",
-    "userID" : 0
-  }],
-  "messageList" : [ {
-    "image" : "http://example.com/aeiou",
-    "timeSent" : "2000-01-23T04:56:07.000+00:00",
-    "messageID" : 6,
-    "text" : "text",
-    "userID" : 1
-  }],
-  "chatRoomID" : 5,
-  "chatRoomName" : "chatRoomName",
-  "chatRoomIcon" : "http://example.com/aeiou"
-};
-    if (Object.keys(examples).length > 0) {
-      resolve(examples[Object.keys(examples)[0]]);
+    updateChat = {
+      "user":
+      {
+        "lastModified": body.user.lastModified,
+        "role": body.user.role,
+        "joined": body.user.joined,
+        "name": body.user.name,
+        "department": body.user.department,
+        "userID": body.user.userID
+      },
+      "message": {
+        "image": body.message.image,
+        "timeSent": body.message.timeSent,
+        "messageID": body.message.messageID,
+        "text": body.message.text,
+        "userID": body.message.userID
+      },
+      "chatRoomID": body.chatRoomID,
+      "chatRoomName": body.chatRoomName,
+      "chatRoomIcon": body.chatRoomIcon
+    };
+    if (updateChat) {
+      resolve(updateChat);
     } else {
       resolve();
     }
   });
 }
 
+
+/*GET profile page*/
+exports.getProfilePage = function(userID) {
+  return new Promise(function(resolve, reject) {
+    var examples = {};
+    examples['application/json'] = {
+    "role" : "role",
+    "githubLink" : "http://example.com/aeiou",
+    "linkedinLink" : "http://example.com/aeiou",
+    "googleLink" : "http://example.com/aeiou",
+    "description" : "description",
+    "profileImage" : "http://example.com/aeiou",
+    "department" : "department",
+    "username" : "username"
+    }
+    if (updateProfileData) {
+      resolve(updateProfileData);
+    } else {
+      resolve(examples);
+    }
+  });
+} 
 
 /**
  * Delete profile description
@@ -187,7 +275,6 @@ exports.userUserIDProfilePageDELETE = function(body,userID) {
   });
 }
 
-
 /**
  * Edit Profile Page
  * All assigned users must be able to edit their Personal Profile page
@@ -198,24 +285,24 @@ exports.userUserIDProfilePageDELETE = function(body,userID) {
  **/
 exports.userUserIDProfilePagePUT = function(body,userID) {
   return new Promise(function(resolve, reject) {
-    var examples = {};
-    examples['application/json'] = {
-  "role" : "role",
-  "githubLink" : "http://example.com/aeiou",
-  "linkedinLink" : "http://example.com/aeiou",
-  "googleLink" : "http://example.com/aeiou",
-  "description" : "description",
-  "profileImage" : "http://example.com/aeiou",
-  "department" : "department",
-  "username" : "username"
+    updateProfileData = {
+  "role" : body.role,
+  "githubLink" : body.githubLink,
+  "linkedinLink" : body.linkedinLink,
+  "googleLink" : body.googleLink,
+  "description" : body.description,
+  "profileImage" : body.profileImage,
+  "department" : body.department,
+  "username" : body.username
 };
-    if (Object.keys(examples).length > 0) {
-      resolve(examples[Object.keys(examples)[0]]);
+    if (updateProfileData) {
+      resolve(updateProfileData);
     } else {
       resolve();
     }
   });
 }
+
 
 
 /**
